Added buttons to Project page and added styling

--- a/Assets/css/custom-style.css
+++ b/Assets/css/custom-style.css
@@ -59,6 +59,12 @@ article {
     font-weight: bold;
 }
 
+#btnDeploy {
+    background-color: darkgray;
+    font-weight: bold;
+    padding: 5px;
+}
+
 img {
     max-width: 100%;
 }
