--- a/Assets/css/custom-style.css
+++ b/Assets/css/custom-style.css
@@ -17,9 +17,10 @@ body {
 /*color for header Contact*/
 
 .page-header1 {
+    background-color: rgba(0, 0, 0, 0.493);
     color: ghostwhite;
+    text-align: center;
 }
-
 
 #paragraph {
     background-color: rgba(0, 0, 0, 0.493);
@@ -60,7 +61,7 @@ article {
 }
 
 #githubLink {
-    color: red;
+    color: greenyellow;
 }
 
 #deployLink {
@@ -141,13 +142,6 @@ footer {
     justify-content: center;
 }
 
-.rowCenter {
-    padding: 10px;
-    justify-content: center;
-    display: inline-flex;
-}
-
-
 .contact-card {
     flex-direction: row;
     justify-content: center;
@@ -155,12 +149,12 @@ footer {
     border-radius: 10px;
     background-color: lightgray;
     padding: 5px;
-    
 }
 
 .contactLabel {
     text-align: center;
     color:black;
+    font-weight: bold;
 }
 
 
@@ -185,4 +179,23 @@ i {
     margin-right: 5px;
    display: inline-block;
 }
+#globe {
+    font-size: medium;
+}
 
+#directCards {
+    justify-content: center;
+}
+
+
+#indCard {
+    background-color: white;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-right: 4px;
+    border-radius: 10px;
+    width: 7.5rem;
+    text-align: center;
+    padding: 30px;
+}
