--- a/Assets/css/custom-style.css
+++ b/Assets/css/custom-style.css
@@ -137,6 +137,25 @@ footer {
         bottom: 0;
 }
 
+.iframeContainer {
+    width: 25%;
+    min-width: 325px;
+    max-width: 480px;
+}
+
+.relativeDiv {
+    position: relative;
+    padding-bottom: 133%;
+    box-sizing: border-box;
+}
+
+object {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+}
 
 /*style for form group on contact page*/
 .form-group {
